--- a/sass/layouts/fixed-width.scss
+++ b/sass/layouts/fixed-width.scss
@@ -88,14 +88,6 @@ $zen-auto-include-item-base: false;
 }
 
 /*
- * The layout when there are no sidebars.
- */
-
-#content {
-  width: $zen-grid-width;
-}
-
-/*
  * The layout when there is only one sidebar, the left one.
  */
 
